syntax = "proto3";

package user;



message UserRequest {
    string name =1;
    int32 age =2;
    string email=3;
    string password=4;
}

message UserResponse {
    string message=1;
}


service UserService {
    rpc CreateUser(UserRequest) returns (UserResponse);
}